# LitSyncCOMBO

LitSync_Server/: .dockerignore  Dockerfile  app.py  asgi.py  config.py  pyproject.toml  requirements.txt  wsgi.py
LitSync_Server/core/: __init__.py  change_detector.py  clients.py  parser.py  prompt_builder.py  request_coordinator.py
LitSync_Server/core/context7/: __init__.py  client.py  exceptions.py  models.py
LitSync_Server/web/: api.py  api_v2.py  sockets.py
litsync-client/: client.py  config.py  gui.py  litsync-client.spec  litsync.spec  pathfilter.py  pyproject.toml  requirements.txt  testfile.py  worker.py
litsync-extension/: background.js  content.js  keep_active.js  manifest.json  popup.css  popup.html  popup.js  responseShortener.js  styles.css
