[tool.poetry]
name = "litsync-server"
version = "2.0.0"
description = "Real-time synchronization server for code editing via LLM. Quart + Socket.IO + Polling."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "core"}, {include = "web"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.6"
python-socketio = "^5.11.2"
hypercorn = "^0.16.0"
quart-cors = "^0.7.0"
httpx = ">=0.27.0"
pydantic = ">=2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.0"
black = "^24.4.2"
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.main.api"